manifests/betterplayer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: betterplayer-deployment
  labels:
    app: betterplayer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: betterplayer
  template:
    metadata:
      labels:
        app: betterplayer
    spec:
      containers:
      - name: betterplayer
        imagePullPolicy: Always
        image: registry.thedutchmc.nl/betterplayer:latest
