manifests/catexplorer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catexplorer-deployment
  labels:
    app: catexplorer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: catexplorer
  template:
    metadata:
      labels:
        app: catexplorer
    spec:
      containers:
      - name: catexplorer
        image: thedutchmc/catexplorer:latest
        volumeMounts:
        - name: catexplorer-pics
          mountPath: /data
      volumes:
       - name: catexplorer-pics
         persistentVolumeClaim:
           claimName: catexplorer-pvc
