manifests/fill_pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fill-pod
spec:
  containers:
  - name: fill-pod
    image: ubuntu:latest
    imagePullPolicy: IfNotPresent
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
    volumeMounts:
    - name: data
      mountPath: /data
  volumes:
  - name: data
    persistentVolumeClaim:
      claimName: fill-pod
