manifests/reactioner-bot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reactioner-bot
  labels:
    app: reactioner-bot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reactioner-bot
  template:
    metadata:
      labels:
        app: reactioner-bot
    spec:
      containers:
      - name: reactioner-bot
        imagePullPolicy: Always
        image: docker-registry.k8s.array21.dev/reactioner-bot:latest
        volumeMounts:
        - name: config
          mountPath: /config/
      volumes:
      - name: config
        configMap:
          name: reactioner-bot
          items:
          - key: config
            path: config.yml
