manifests/ubuntu.yaml
apiVersion: v1
kind: Pod
metadata:
  namespace: kube-system
  name: ubuntu
spec:
  containers:
  - name: ubuntu
    image: ubuntu:latest
    imagePullPolicy: IfNotPresent
    command: [ "/bin/bash", "-c", "--" ]
    args: [ "while true; do sleep 30; done;" ]
