manifests/netherlandsbot-core.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netherlandsbot-core-deployment
  labels:
    app: netherlandsbot-core
spec:
  replicas: 1
  selector:
    matchLabels:
      app: netherlandsbot-core
  template:
    metadata:
      labels:
        app: netherlandsbot-core
    spec:
      containers:
      - name: netherlandsbot-core
        image: registry.thedutchmc.nl/netherlandsbot-core:latest
        ports:
        - name: tcp-module
          containerPort: 5555
        volumeMounts:
        - name: config
          mountPath: /
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: netherlandsbot-core-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: netherlandsbot-core-service
spec:
  type: LoadBalancer
  selector:
    app: netherlandsbot-core
  ports:
  - protocol: TCP
    name: tcp-module
    port: 5555
    targetPort: 5555
