manifests/bookstack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bookstack-deployment
  labels:
    app: bookstack
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookstack
  template:
    metadata:
      labels:
        app: bookstack
    spec:
      containers:
      - name: bookstack
        image: registry.thedutchmc.nl/bookstack:latest
        volumeMounts:
        - name: bookstack-config
          mountPath: /var/www/bookstack
        ports:
        - name: web
          containerPort: 80
      volumes:
      - name: bookstack-config
        persistentVolumeClaim:
          claimName: bookstack-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: bookstack-service
spec:
  type: LoadBalancer
  selector:
    app: bookstack
  ports:
  - protocol: TCP
    name: web
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: bookstack-ingress
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
spec:
  tls:
  - hosts:
    - wiki.thedutchmc.nl
    secretName: thedutchmc-tls
  rules:
  - host: wiki.thedutchmc.nl
    http:
      paths:
      - backend:
          serviceName: bookstack-service
          servicePort: 80
