manifests/computer-bestel-nl.yaml
apiVersion: v1
kind: Service
metadata:
  name: computer-bestel-nl
spec:
  type: ExternalName
  externalName: computer-bestel-nl.labs.thedutchmc.nl
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: computer-bestel-nl
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  tls:
  - hosts:
    - unifi.k8s.thedutchmc.nl
    secretName: thedutchmc-tls
  rules:
  - host: computer-bestel-nl.k8s.thedutchmc.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: computer-bestel-nl
            port:
              number: 443
