manifests/drone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-deployment
  labels:
    app: drone
spec:
  replicas: 1
  selector:
    matchLabels:
      app: drone
  template:
    metadata:
      labels:
        app: drone
    spec:
      serviceAccountName: drone-runner
      containers:
      #Drone Server
      - name: drone
        image: drone/drone:1.10.1
        ports:
        - containerPort: 443
          name: webinterface
        volumeMounts:
        - name: ssl-keys
          mountPath: /etc/certs/drone.k8s.thedutchmc.nl/
          readOnly: true
        - name: drone-config
          mountPath: /data
      #Drone Runner
      - name: runner
        image: drone/drone-runner-kube:latest
        ports:
        - containerPort: 3000
      volumes:
      - name: ssl-keys
        secret:
          secretName: thedutchmc-tls
      - name: drone-config
        persistentVolumeClaim:
          claimName: drone-config-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: drone-service
spec:
  selector:
    app: drone
  ports:
  - protocol: TCP
    name: webinterface
    port: 443
    targetPort: 443
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: drone-ingress
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
    nginx.ingress.kubernetes.io/whitelist-source-range: 85.144.63.138,192.168.1.0/24
spec:
  tls:
  - hosts:
    - drone.k8s.thedutchmc.nl
    secretName: thedutchmc-tls
  rules:
  - host: drone.k8s.thedutchmc.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: drone-service
            port:
              number: 443
