manifests/espocrm.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espocrm-deployment
  labels:
    app: espocrm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: espocrm
  template:
    metadata:
      labels:
        app: espocrm
    spec:
      containers:
      - name: espocrm
        image: registry.thedutchmc.nl/espocrm:latest
        ports:
        - containerPort: 80
          name: web
        volumeMounts:
        - name: webdir
          mountPath: /var/www/html
      - name: espocrm-cron
        image: registry.thedutchmc.nl/espocrm-cron:latest
        volumeMounts:
        - name: webdir
          mountPath: /var/www/html
      volumes:
      - name: webdir
        persistentVolumeClaim:
          claimName: espocrm-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: espocrm-service
spec:
  selector:
    app: espocrm
  ports:
  - protocol: TCP
    name: web
    port: 80
    targetPort: 80
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: espocrm-ingress
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
spec:
  tls:
  - hosts:
    - espocrm.intern.mrfriendly.nl
    secretName: intern-mrfriendly-tls-secret
  rules:
  - host: espocrm.intern.mrfriendly.nl
    http:
      paths:
      - backend:
          serviceName: espocrm-service
          servicePort: 80
