manifests/espogmailsync.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espogmailsync-deployment
  labels:
    app: espogmailsync
spec:
  replicas: 1
  selector:
    matchLabels:
      app: espogmailsync
  template:
    metadata:
      labels:
        app: espogmailsync
    spec:
      containers:
      - name: espogmailsync-api
        image: registry.thedutchmc.nl/espogmailsync-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: api-port
---
apiVersion: v1
kind: Service
metadata:
  name: espogmailsync-service
spec:
  selector:
    app: espogmailsync
  ports:
  - protocol: TCP
    name: api
    port: 8080
    targetPort: 8080
  #TODO Frontend ports
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: espogmailsync-api-ingress
spec:
  tls:
  - hosts:
    - api.intern.mrfriendly.nl
    secretName: api-intern-mrfriendly-nl-tls-secret
  rules:
  - host: api.intern.mrfriendly.nl
    http:
      paths:
      - path: /espogmailsync
        backend:
          serviceName: espogmailsync-service
          servicePort: 8080
#TODO frontend ingress
