manifests/firefly-iii.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: firefly-iii
  labels:
    app: firefly-iii
spec:
  replicas: 1
  selector:
    matchLabels:
      app: firefly-iii
  template:
    metadata:
      labels:
        app: firefly-iii
    spec:
      containers:
      - name: firefly-iii
        image: fireflyiii/core:latest
        volumeMounts:
        - name: upload
          mountPath: /var/www/html/storage/upload
        ports:
        - name: web
          containerPort: 8080
#      - name: plaid-connector
#        image: registry.gitlab.com/georgehahn/firefly-plaid-connector:latest
#        volumeMounts:
#        - name: plaid-config
#          mountPath: /config
      - name: plaid-backend
        image: docker-registry.k8s.array21.dev/plaid-node-backend
        ports:
        - name: api
          containerPort: 8000
      - name: plaid-frontend
        image: docker-registry.k8s.array21.dev/plaid-frontend
        ports:
        - name: web
          containerPort: 3000
      volumes:
      - name: upload
        persistentVolumeClaim:
          claimName: firefly-iii
      - name: plaid-config
        persistentVolumeClaim:
          claimName: firefly-iii-plaid-config
---
apiVersion: v1
kind: Service
metadata:
  name: firefly-iii
spec:
  selector:
    app: firefly-iii
  ports:
  - protocol: TCP
    name: web
    port: 8080
    targetPort: 8080
  - protocol: TCP
    name: plaid-web
    port: 3000
    targetPort: 3000
  - protocol: TCP
    name: plaid-api
    port: 8000
    targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-iii
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
spec:
  tls:
  - hosts:
    - firefly.k8s.array21.dev
    secretName: array21-tls
  rules:
  - host: firefly.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
         service:
           name: firefly-iii
           port:
             number: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-iii-plaid-backend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
spec:
  tls:
  - hosts:
    - plaid-oauth.k8s.array21.dev
    secretName: array21-tls
  rules:
  - host: plaid-oauth.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
         service:
           name: firefly-iii
           port:
             number: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: firefly-iii-plaid-frontend
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 150m
spec:
  tls:
  - hosts:
    - firefly.k8s.array21.dev
    secretName: array21-tls
  rules:
  - host: plaid.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
         service:
           name: firefly-iii
           port:
             number: 3000
      - path: /api
        pathType: Prefix
        backend: 
          service:
            name: firefly-iii
            port:
              number: 8000
