manifests/homer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homer
  labels:
    app: homer
spec:
  selector:
    matchLabels:
      app: homer
  template:
    metadata:
      labels:
        app: homer
    spec:
      containers:
      - name: homer
        image: b4bz/homer:latest
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: homer-storage
          mountPath: /www/assets
      volumes:
      - name: homer-storage
        persistentVolumeClaim:
          claimName: homer
---
apiVersion: v1
kind: Service
metadata:
  name: homer
spec:
  selector:
    app: homer
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: homer
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 85.144.63.138,192.168.1.0/24
spec:
  tls:
  - hosts:
    - homer.k8s.array21.dev
    secretName: array21-tls
  rules:
  - host: homer.k8s.array21.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: homer
            port:
              number: 8080
