manifests/kubernetes-dashboard.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: kubernetes-dashboard
  name: ingress-k8s-dashboard
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/whitelist-source-range: 85.144.63.138,192.168.1.0/24
spec:
  tls:
  - hosts:
    - dashboard.k8s.thedutchmc.nl
    secretName: thedutchmc-tls
  rules:
  - host: dashboard.k8s.thedutchmc.nl
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
