manifests/radarr.yaml
#Deployment. radarr container
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr-deployment
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      containers:
      - name: radarr
        image: linuxserver/radarr
        ports:
        #Webinterface
        - containerPort: 7878
          name: webint
        volumeMounts:
        #radarrs config directory (iSCSI)
        - name: radarr-config
          mountPath: /config
        #Transmission download directory
        - name: transmission-storage
          mountPath: /data/completed/
        #Final resting place for the downloaded media
        - name: movie-storage
          mountPath: /movies
      volumes:
      - name: radarr-config
        persistentVolumeClaim:
          claimName: radarr-config-pvc
      - name: transmission-storage
        persistentVolumeClaim:
          claimName: transmission-radarr-storage-pvc
      - name: movie-storage
        persistentVolumeClaim: 
          claimName: movie-radarr-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
spec:
  selector:
    app: radarr
  ports:
  #Webinterface
  - protocol: TCP
    name: webint
    port: 7878
    targetPort: 7878
---
#Ingress resource. Picked up by the NGINX ingress controller
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: radarr-ingress
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 85.144.63.138,192.168.1.0/24
    nginx.ingress.kubernetes.io/proxy-body-size: 150m

spec:
  tls:
  - hosts:
    - radarr.k8s.thedutchmc.nl
    secretName: thedutchmc-tls
  rules:
  - host: radarr.k8s.thedutchmc.nl
    http:
      paths:
      - backend:
          serviceName: radarr-service
          servicePort: 7878
