manifests/sonarr.yaml
#Deployment. Sonarr container
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr-deployment
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
      - name: sonarr
        image: 'linuxserver/sonarr:preview'
        ports:
        #Webinterface
        - containerPort: 8989
          name: webint
        volumeMounts:
        #Sonarrs config directory (iSCSI)
        - name: sonarr-config
          mountPath: /config
        #Transmission download directory
        - name: transmission-storage
          mountPath: /data/completed/
        #Final resting place for the downloaded media
        - name: tvshow-storage
          mountPath: /tv
      volumes:
      - name: sonarr-config
        persistentVolumeClaim:
          claimName: sonarr-config-pvc
      - name: transmission-storage
        persistentVolumeClaim:
          claimName: transmission-sonarr-storage-pvc
      - name: tvshow-storage
        persistentVolumeClaim: 
          claimName: tvshow-sonarr-storage-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr-service
spec:
  selector:
    app: sonarr
  ports:
  #Webinterface
  - protocol: TCP
    name: webint
    port: 8989
    targetPort: 8989
---
#Ingress resource. Picked up by the NGINX ingress controller
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sonarr-ingress
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 85.144.63.138,192.168.1.0/24
    nginx.ingress.kubernetes.io/proxy-body-size: 150m

spec:
  tls:
  - hosts:
    - sonarr.k8s.thedutchmc.nl
    secretName: thedutchmc-tls
  rules:
  - host: sonarr.k8s.thedutchmc.nl
    http:
      paths:
      - backend:
          serviceName: sonarr-service
          servicePort: 8989
