manifests/transmision.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission-deployment
  labels:
    app: transmission
spec:
  replicas: 1
  selector:
    matchLabels:
      app: transmission
  template:
    metadata:
      labels:
        app: transmission
    spec:
      containers:
      - name: transmission
        image: "haugene/transmission-openvpn:3.3"
        ports:
        #Webinterface
        - containerPort: 9091
          name: webit
        securityContext:
          capabilities:
            add:
            - NET_ADMIN
        volumeMounts:
        #Transmission-home data directory
        - name: transmission-home-config-volume
          mountPath: /data/transmission-home
        #Download directory for transmission
        - name: transmission-download-volume
          mountPath: /data/completed
      volumes:
      - name: transmission-home-config-volume
        persistentVolumeClaim:
          claimName: transmission-home-config-pvc
      - name: transmission-download-volume
        persistentVolumeClaim:
          claimName: transmission-download-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: transmission-service
spec:
  selector:
    app: transmission
  ports:
  #Webinterface
  - protocol: TCP
    name: webint
    port: 9091
    targetPort: 9091
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: transmission-ingress
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/whitelist-source-range: 85.144.63.138,192.168.1.0/24
spec:
  tls:
  - hosts:
    - transmission.k8s.thedutchmc.nl
    secretName: thedutchmc-tls
  rules:
  - host: transmission.k8s.thedutchmc.nl
    http:
      paths:
      - backend:
          serviceName: transmission-service
          servicePort: 9091
