manifests/unifi.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi-deployment
  labels:
    app: unifi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unifi
  template:
    metadata:
      labels:
        app: unifi
    spec:
      containers:
      - name: unifi
        image: linuxserver/unifi-controller:latest
        ports:
        # Device/Controller communication
        - containerPort: 8080
          name: device-comm
        # STUN
        - containerPort: 3478
          name: stun
        # Webinterface
        - containerPort: 8443
          name: webint
        # Device Discovery
        - containerPort: 10001
          name: device-disc
        volumeMounts:
        - name: unifi-storage
          mountPath: /config
      volumes:
      - name: unifi-storage
        persistentVolumeClaim:
          claimName: unifi-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-udp-service
  annotations:
    metallb.universe.tf/allow-shared-ip: unifi
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.10.120
  selector:
    app: unifi
  ports:
  # Device communication
  #- protocol: TCP
  #  name: device-comm
  #  port: 8080
  #  targetPort: 8080
  # STUN
  - protocol: UDP
    name: stun
    port: 3478
    targetPort: 3478
  # Webinterface
  #- protocol: TCP
  #  name: webint
  #  port: 8443
  #  targetPort: 8443
  # Device Discovery
  - protocol: UDP
    name: device-disc
    port: 10001
    targetPort: 10001
---
apiVersion: v1
kind: Service
metadata:
  name: unifi-tcp-service
  annotations:
    metallb.universe.tf/allow-shared-ip: unifi
spec:
  type: LoadBalancer
  loadBalancerIP: 10.10.10.120
  selector:
    app: unifi
  ports:
  # Device communication
  - protocol: TCP
    name: device-comm
    port: 8080
    targetPort: 8080
  # STUN
  #- protocol: UDP
  #  name: stun
  #  port: 3478
  #  targetPort: 3478
  # Webinterface
  - protocol: TCP
    name: webint
    port: 8443
    targetPort: 8443
  # Device Discovery
  #- protocol: UDP
  #  name: device-disc
  #  port: 10001
  #  targetPort: 10001
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: unifi-ingress
  annotations:
    kubernets.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/whitelist-source-range: 85.144.63.138,192.168.1.0/24
spec:
  tls:
  - hosts:
    - unifi.k8s.thedutchmc.nl
    secretName: thedutchmc-tls
  rules:
  - host: unifi.k8s.thedutchmc.nl
    http:
      paths:
      - backend:
          serviceName: unifi-tcp-service
          servicePort: 8443
